--- a/Predictive Analysis 2.ipynb
+++ b/Predictive Analysis 2.ipynb
@@ -1,22 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "import seaborn as sns\n",
-    "import numpy as np"
+    "# Model Building and Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -56,6 +59,7 @@
        "      <th>pressuremean_24h</th>\n",
        "      <th>vibrationmean_24h</th>\n",
        "      <th>age</th>\n",
+       "      <th>date</th>\n",
        "      <th>failure</th>\n",
        "      <th>model_enc</th>\n",
        "    </tr>\n",
@@ -70,6 +74,7 @@
        "      <td>101.652072</td>\n",
        "      <td>44.017022</td>\n",
        "      <td>18</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
@@ -82,6 +87,7 @@
        "      <td>101.166076</td>\n",
        "      <td>40.561007</td>\n",
        "      <td>3</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
@@ -94,6 +100,7 @@
        "      <td>98.466369</td>\n",
        "      <td>39.988195</td>\n",
        "      <td>20</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
@@ -106,6 +113,7 @@
        "      <td>97.419663</td>\n",
        "      <td>41.387643</td>\n",
        "      <td>11</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -118,6 +126,7 @@
        "      <td>106.015786</td>\n",
        "      <td>38.649454</td>\n",
        "      <td>15</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
@@ -130,6 +139,7 @@
        "      <td>100.671976</td>\n",
        "      <td>41.085385</td>\n",
        "      <td>14</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
@@ -142,6 +152,7 @@
        "      <td>99.151464</td>\n",
        "      <td>40.033005</td>\n",
        "      <td>10</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
@@ -154,6 +165,7 @@
        "      <td>100.003531</td>\n",
        "      <td>39.886126</td>\n",
        "      <td>17</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -166,6 +178,7 @@
        "      <td>118.892609</td>\n",
        "      <td>40.369239</td>\n",
        "      <td>5</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
@@ -178,6 +191,7 @@
        "      <td>100.414238</td>\n",
        "      <td>46.683949</td>\n",
        "      <td>16</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -190,6 +204,7 @@
        "      <td>100.321117</td>\n",
        "      <td>40.542345</td>\n",
        "      <td>15</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
@@ -202,6 +217,7 @@
        "      <td>96.625657</td>\n",
        "      <td>39.985580</td>\n",
        "      <td>0</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
@@ -214,6 +230,7 @@
        "      <td>115.914748</td>\n",
        "      <td>40.516034</td>\n",
        "      <td>4</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
@@ -226,6 +243,7 @@
        "      <td>102.668562</td>\n",
        "      <td>40.151465</td>\n",
        "      <td>9</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
@@ -238,6 +256,7 @@
        "      <td>102.179901</td>\n",
        "      <td>38.958740</td>\n",
        "      <td>7</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -250,6 +269,7 @@
        "      <td>95.549026</td>\n",
        "      <td>40.603211</td>\n",
        "      <td>14</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
@@ -262,6 +282,7 @@
        "      <td>98.025883</td>\n",
        "      <td>42.079643</td>\n",
        "      <td>7</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
@@ -274,6 +295,7 @@
        "      <td>98.098540</td>\n",
        "      <td>53.487727</td>\n",
        "      <td>14</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
@@ -286,6 +308,7 @@
        "      <td>98.798677</td>\n",
        "      <td>40.227626</td>\n",
        "      <td>10</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
@@ -298,6 +321,7 @@
        "      <td>98.881089</td>\n",
        "      <td>42.317406</td>\n",
        "      <td>6</td>\n",
+       "      <td>2015-01-04</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
@@ -328,30 +352,30 @@
        "18         46  2015-01-04 06:00:00    169.439942      456.074925   \n",
        "19         47  2015-01-04 06:00:00    173.825605      437.521158   \n",
        "\n",
-       "    pressuremean_24h  vibrationmean_24h  age  failure  model_enc  \n",
-       "0         101.652072          44.017022   18      0.0        2.0  \n",
-       "1         101.166076          40.561007    3      0.0        3.0  \n",
-       "2          98.466369          39.988195   20      0.0        2.0  \n",
-       "3          97.419663          41.387643   11      0.0        0.0  \n",
-       "4         106.015786          38.649454   15      0.0        3.0  \n",
-       "5         100.671976          41.085385   14      0.0        2.0  \n",
-       "6          99.151464          40.033005   10      0.0        3.0  \n",
-       "7         100.003531          39.886126   17      0.0        0.0  \n",
-       "8         118.892609          40.369239    5      0.0        3.0  \n",
-       "9         100.414238          46.683949   16      1.0        0.0  \n",
-       "10        100.321117          40.542345   15      0.0        3.0  \n",
-       "11         96.625657          39.985580    0      0.0        3.0  \n",
-       "12        115.914748          40.516034    4      1.0        1.0  \n",
-       "13        102.668562          40.151465    9      0.0        3.0  \n",
-       "14        102.179901          38.958740    7      0.0        0.0  \n",
-       "15         95.549026          40.603211   14      0.0        2.0  \n",
-       "16         98.025883          42.079643    7      0.0        3.0  \n",
-       "17         98.098540          53.487727   14      0.0        2.0  \n",
-       "18         98.798677          40.227626   10      0.0        3.0  \n",
-       "19         98.881089          42.317406    6      0.0        1.0  "
+       "    pressuremean_24h  vibrationmean_24h  age        date  failure  model_enc  \n",
+       "0         101.652072          44.017022   18  2015-01-04      0.0        2.0  \n",
+       "1         101.166076          40.561007    3  2015-01-04      0.0        3.0  \n",
+       "2          98.466369          39.988195   20  2015-01-04      0.0        2.0  \n",
+       "3          97.419663          41.387643   11  2015-01-04      0.0        0.0  \n",
+       "4         106.015786          38.649454   15  2015-01-04      0.0        3.0  \n",
+       "5         100.671976          41.085385   14  2015-01-04      0.0        2.0  \n",
+       "6          99.151464          40.033005   10  2015-01-04      0.0        3.0  \n",
+       "7         100.003531          39.886126   17  2015-01-04      0.0        0.0  \n",
+       "8         118.892609          40.369239    5  2015-01-04      0.0        3.0  \n",
+       "9         100.414238          46.683949   16  2015-01-04      1.0        0.0  \n",
+       "10        100.321117          40.542345   15  2015-01-04      0.0        3.0  \n",
+       "11         96.625657          39.985580    0  2015-01-04      0.0        3.0  \n",
+       "12        115.914748          40.516034    4  2015-01-04      1.0        1.0  \n",
+       "13        102.668562          40.151465    9  2015-01-04      0.0        3.0  \n",
+       "14        102.179901          38.958740    7  2015-01-04      0.0        0.0  \n",
+       "15         95.549026          40.603211   14  2015-01-04      0.0        2.0  \n",
+       "16         98.025883          42.079643    7  2015-01-04      0.0        3.0  \n",
+       "17         98.098540          53.487727   14  2015-01-04      0.0        2.0  \n",
+       "18         98.798677          40.227626   10  2015-01-04      0.0        3.0  \n",
+       "19         98.881089          42.317406    6  2015-01-04      0.0        1.0  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,44 +385,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 122,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2015-04-20 15:00:00    102\n",
-       "2015-01-24 00:00:00    102\n",
-       "2015-04-20 06:00:00    102\n",
-       "2015-04-20 18:00:00    102\n",
-       "2015-01-24 18:00:00    102\n",
-       "                      ... \n",
-       "2015-08-31 21:00:00    100\n",
-       "2015-08-22 09:00:00    100\n",
-       "2015-06-08 00:00:00    100\n",
-       "2015-09-27 03:00:00    100\n",
-       "2015-12-10 03:00:00    100\n",
-       "Name: datetime_x, Length: 2898, dtype: int64"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "final3['datetime_x'].value_counts()"
+    "### Splitting the dataset into Train,Validation & Test sets."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -1513,18 +1512,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(7,)"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-b2958ad6b51c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
+     ]
     }
    ],
    "source": [
